--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onmousemove="randomRGB()">
+<html lang="en">
 <head>
   {%load static%}
   <meta charset="UTF-8">
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'css/index_background.css' %}">
 
 </head>
 <body>
+  <div class="raveMode">
+    <input class="btn" type="button" value="RaveMode" onclick="raveMode()">
+  </div>
   <div class="navigation">
     <div class="projects">
       <!-- this a html element that creates a line -->
