--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -36,9 +36,9 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/dotenv@16.0.1/lib/main.min.js"></script>
   <script src="{% static 'js/apiCalls/ipAPI.js' %}"></script>
-  <script src="{% static 'js/index.js' %}"></script>
+  <script src="{% static 'js/frontEnd/index.js' %}"></script>
 </body>
 <!-- teest -->
 </html>
